# src/app/swagger.json
@@ -172,6 +172,87 @@
         },
         "deprecated": false
       }
+    },
+    "/worker/summarize/{npwp}/{spt_id}": {
+      "get": {
+        "tags": [
+          "Worker"
+        ],
+        "summary": "root folder",
+        "description": "",
+        "operationId": "getJobLoadLampiranPut03",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "npwp",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          },
+          {
+            "in": "path",
+            "name": "spt_id",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Result",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DataResponse"
+                }
+              }
+            }
+          }
+        },
+        "deprecated": false
+      }
+      ,
+      "post": {
+        "tags": [
+          "Worker"
+        ],
+        "summary": "root folder",
+        "description": "",
+        "operationId": "createJobSummarize",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "npwp",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          },
+          {
+            "in": "path",
+            "name": "spt_id",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Result",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DataResponse"
+                }
+              }
+            }
+          }
+        },
+        "deprecated": false
+      }
     }
   },
   "components": {
